# llama.cpp

./: CLAUDE.md
examples/diffusion/: diffusion-cli.cpp
tools/server/: CMakeLists.txt  server-diffusion.cpp
